camera + fix invs list

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -120,4 +120,5 @@
     <string name="server_system">server_system</string>
     <string name="back_to_invs_list">Back to inventories</string>
     <string name="adding_of_new_good">Adding a new product</string>
+    <string name="article_search">search only  article</string>
 </resources>
