--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -211,6 +211,7 @@
     <string name="turn_off_flashlight">Turn off Flashlight</string>
     <string name="back_to_invs_list">Back to inventories</string>
     <string name="adding_of_new_good">Adding a new product</string>
+    <string name="article_search">search only  article</string>
 
 
 </resources>
