--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -120,4 +120,5 @@
     <string name="turn_on_flashlight">Включить фонарик</string>
     <string name="back_to_invs_list">Вернуться к списку переучетов</string>
     <string name="adding_of_new_good">Добавление нового товара</string>
+    <string name="article_search">искать только по артикулу</string>
 </resources>
