--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -121,4 +121,6 @@
     <string name="back_to_invs_list">Вернуться к списку переучетов</string>
     <string name="adding_of_new_good">Добавление нового товара</string>
     <string name="article_search">искать только по артикулу</string>
+    <string name="settings_online_connect_checkbox">Использовать прямое подключение к Firebird БД (new)</string>
+    <string name="settings_barcodeserver_connect_checkbox">Соединение с BarcodeServer31 (old)</string>
 </resources>
