--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,88 +212,35 @@
     <string name="back_to_invs_list">Back to inventories</string>
     <string name="adding_of_new_good">Adding a new product</string>
     <string name="article_search">search only  article</string>
-    <string name="title_activity_main">Inventory</string>
-    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_main" translatable="false">Inventory</string>
+    <string name="title_activity_settings" translatable="false">Settings</string>
 
     <!-- Strings related to Settings -->
 
-    <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
 
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
 
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
-
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-        <item>-1</item>
-    </string-array>
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
-
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
-
-    <string-array name="list_preference_entries">
-        <item>Entry 1</item>
-        <item>Entry 2</item>
-        <item>Entry 3</item>
-    </string-array>
-
-    <string-array name="list_preference_entry_values">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-    </string-array>
-
-    <string-array name="multi_select_list_preference_default_value" />
-
-    <string name="pref_title_system_sync_settings">System sync settings</string>
-
-    <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
-
-    <string name="pref_title_new_message_notifications">New message notifications</string>
-
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
-
-    <string name="pref_title_vibrate">Vibrate</string>
     <string name="settings_online_connect_checkbox">Use connect to Firebird database</string>
 
     <string name="request_goods" translatable="false">select
     dg.id,
     dg.article,
     dg.name,
-    (select first 1 db.barcode from dic_goods_barcodes db where db.goods_id = dg.id) as barcode
-    from dic_goods dg</string>
+    (select first 1 db.barcode from dic_goods_barcodes db where db.goods_id = dg.id) as barcode,
+         (select first 1 DPLD.PRICE
+        from DIC_PRICE_LIST DPL, DIC_PRICE_LIST_DT DPLD
+        where DPLD.HD_ID = DPL.ID and
+              DPL.GOODS_ID = DG.ID and
+              DPLD.DATE_FROM &gt; current_timestamp
+            order by DPLD.DATE_FROM desc) as price
+    from dic_goods dg\u0020</string>
+
+    <string name="request_goods_by_name" translatable="false">\u0020dg.name containing\u0020</string>
+    <string name="request_goods_by_article" translatable="false">\u0020dg.article =\u0020</string>
+    <string name="request_goods_by_barcode" translatable="false">\u0020dg.id = ( select dgb.goods_id  from dic_goods_barcodes dgb where dgb.barcode =\u0020</string>
+    <string name="request_where" translatable="false">\u0020where\u0020</string>
+    <string name="request_and" translatable="false">\u0020and\u0020</string>
+    <string name="request_or" translatable="false">\u0020or\u0020</string>
+    <string name="settings_barcodeserver_connect_checkbox">Use connect to BarcodeServer31 (old)</string>
 
 
 </resources>
